# Paralela

./: PRECTICATALLER.txt
01_FRACTAL_JULIA/: CMakeLists.txt  fractal_openmp.cpp  fractal_openmp.h  main.cpp
03_Fractal-DLL/: CMakeLists.txt  comandos.txt  fractal_simd.cpp  fractal_simd.h  palette.cpp
05_Ejemplo_MPI/: CMakeLists.txt  PruebaColectivoImagen.cpp  main.cpp  matrices_mult.cpp
07Cuda/: CMakeLists.txt  kernel.cu  main.cpp
Ejemplo001/: CMakeLists.txt  main.cpp
Ejemplo_01/: CMakeLists.txt  main.cpp
O2Fractal_Java/: build.gradle.kts  settings.gradle.kts
O2Fractal_Java/gradle/wrapper/: gradle-wrapper.properties
O2Fractal_Java/src/main/java/com/programacion/paralela/: FPSCounter.java  FractalCpu.java  FractalMain.java  FractalParams.java
julia2/: build.gradle.kts
julia2/gradle/wrapper/: gradle-wrapper.properties
julia2/src/main/java/paralela/: FPSCounter.java  FractalCpu.java  FractalDll.java  FractalHilos.java  FractalMain.java  FractalParams.java  FractalSimd.java  fractalMain.java
